Flatten tree structure.
Remove polygen/grammar, polygen/generator directories.

--- a/codegen/python/parser.py.in
+++ b/codegen/python/parser.py.in
@@ -8,7 +8,7 @@ from typing import Optional
 from functools import wraps
 
 from polygen.reader import Reader
-from polygen.grammar.node import (
+from polygen.node import (
     Node,
     Grammar,
     Expression,
