--- a/codegen/python/parser.py.in
+++ b/codegen/python/parser.py.in
@@ -38,6 +38,19 @@ def isnode(obj):
     return isinstance(obj, Node)
 
 
+class Success:
+    """Parsing result wrapper."""
+
+    def __init__(self, value=None):
+        self.value = value
+
+    def __repr__(self):
+        return f'Success({self.value})'
+
+    def __str__(self):
+        return repr(self)
+
+
 def _memoize(fn):
 
     @wraps(fn)
@@ -52,6 +65,10 @@ def _memoize(fn):
         else:
             result, endpos = memo
             self._reset(endpos)
+
+        if result is not None:
+            if type(result) is not Success:
+                return Success(result)
         return result
 
     return wrapper
@@ -86,6 +103,12 @@ class _Head:
 def _memoize_lr(fn):
     # The algorithm is taken from "Packrat parsers can support left recursion"
     # https://dl.acm.org/doi/10.1145/1328408.1328424
+
+    def wrap(obj):
+        if obj is not None:
+            if type(obj) is not Success:
+                return Success(obj)
+        return obj
 
     rule = fn.__name__
 
@@ -139,16 +162,16 @@ def _memoize_lr(fn):
                 return lr_answer(self, args, key, pos)
             else:
                 self._memos[key] = result, endpos
-                return result
+                return wrap(result)
 
         else:
             result, pos = m
             self._reset(pos)
             if type(result) is _LR:
                 setup_lr(self, result)
-                return result.seed
+                return wrap(result.seed)
             else:
-                return result
+                return wrap(result)
 
     def setup_lr(self, lr):
         if lr.head is None:
@@ -205,42 +228,45 @@ class Parser:
         self._pos = 0
 
     @_memoize
-    def _expectc(self, char: str | None = None) -> Optional[str]:
+    def _expectc(self, char: str | None = None) -> Success | None:
         if c := self._peek_char():
-            if char is not None and c != char:
-                return None
-            self._pos += 1
-            return c
+            if char is None or c == char:
+                self._pos += 1
+                return Success(c)
         return None
 
     @_memoize
-    def _expects(self, string: str) -> Optional[str]:
+    def _expects(self, string: str) -> Success | None:
         pos = self._mark()
         for c in string:
             if c != self._peek_char():
                 self._reset(pos)
                 return None
             self._pos += 1
-        return string
+        return Success(string)
 
-    def _lookahead(self, positive, fn, *args):
+    def _lookahead(self, positive, fn, *args) -> Success | None:
         pos = self._mark()
         ok = fn(*args) is not None
         self._reset(pos)
-        return ok == positive
+        if ok == positive:
+            return Success()
+        return None
 
-    def _loop(self, nonempty, fn, *args) -> Optional[list]:
+    def _loop(self, nonempty, fn, *args) -> Success | None:
         pos = lastpos = self._mark()
         nodes = []
         while (node := fn(*args)) is not None and self._mark() > lastpos:
-            nodes.append(node)
+            # Unwrap nodes, removing empty wrappers
+            if node.value is not None:
+                nodes.append(node.value)
             lastpos = self._mark()
         if len(nodes) >= nonempty:
-            return nodes
+            return Success(nodes)
         self._reset(pos)
         return None
 
-    def _rep(self, beg, end, fn, *args):
+    def _rep(self, beg, end, fn, *args) -> Success | None:
         end = beg if end is None else end
         pos = lastpos = self._mark()
         count = 0
@@ -250,7 +276,9 @@ class Parser:
             lastpos = self._mark()
             count += 1
         if count >= beg and count <= end:
-            return tuple(nodes)
+            # Unwrap nodes, removing empty wrappers
+            nodes = tuple(n.value for n in nodes if n.value is not None)
+            return Success(nodes)
         self._reset(pos)
         return None
 
@@ -260,19 +288,18 @@ class Parser:
             return None
         for beg, end in ranges:
             if char >= beg and char <= end:
-                return self._get_char()
+                return Success(self._get_char())
 
     def _maybe(self, fn, *args):
-        if (result := fn(*args)) is not None:
-            return result
-        return True
+        result = fn(*args)
+        return Success(result.value if result is not None else result)
 
-    def _get_char(self) -> str:
+    def _get_char(self) -> str | None:
         char = self._peek_char()
         self._pos += 1
         return char
 
-    def _peek_char(self) -> str:
+    def _peek_char(self) -> str | None:
         if self._pos == len(self._chars):
             self._chars.append(next(self._reader, None))
         return self._chars[self._pos]
@@ -283,7 +310,7 @@ class Parser:
     def _reset(self, pos: int):
         self._pos = pos
 
-    def parse(self):
+    def parse(self) -> Success:
         return self._%% entry %%()
 
     %% body %%
