--- a/codegen/python/parser.py.in
+++ b/codegen/python/parser.py.in
@@ -4,38 +4,32 @@
 
 from __future__ import annotations
 
-from typing import Optional
 from functools import wraps
 
 from polygen.reader import Reader
 from polygen.node import (
-    Node,
     Grammar,
-    Expression,
     Rule,
     MetaRef,
     MetaRule,
-    Identifier,
-    Range,
+    Expr,
     Alt,
-    Part,
-    AnyChar,
+    NamedItem,
+    Id,
     String,
+    Char,
+    AnyChar,
     Class,
-    Not,
-    And,
+    Range,
     ZeroOrOne,
     ZeroOrMore,
     OneOrMore,
     Repetition,
-    Char
+    And,
+    Not
 )
 
 __all__ = ['Parser']
-
-
-def isnode(obj):
-    return isinstance(obj, Node)
 
 
 class Success:
@@ -74,142 +68,37 @@ def _memoize(fn):
     return wrapper
 
 
-class _LR:
-    def __init__(self, seed, rule, head):
-        self.seed = seed
-        self.rule = rule
-        self.head = head
-
-    def __repr__(self):
-        return f'_LR(seed={self.seed}, rule={self.rule}, head={self.head})'
-
-    def __str__(self):
-        return repr(self)
-
-
-class _Head:
-    def __init__(self, rule, involved_set, eval_set):
-        self.rule = rule
-        self.involved_set = involved_set
-        self.eval_set = eval_set
-
-    def __repr__(self):
-        return f'_Head({self.rule}, {self.involved_set}, {self.eval_set})'
-
-    def __str__(self):
-        return repr(self)
-
-
 def _memoize_lr(fn):
-    # The algorithm is taken from "Packrat parsers can support left recursion"
-    # https://dl.acm.org/doi/10.1145/1328408.1328424
-
-    def wrap(obj):
-        if obj is not None:
-            if type(obj) is not Success:
-                return Success(obj)
-        return obj
-
-    rule = fn.__name__
-
-    def recall(self, args):
-        pos = self._mark()
-        key = (fn, args, pos)
-        m = self._memos.get(key)
-        head = self._heads.get(pos)
-
-        # If not growing a seed parse, just return what is stored
-        # in the memo table
-        if head is None:
-            return m
-
-        # Do not evaluate any rule that is not involved in This
-        # left recursion
-        if m is None and rule not in head.involved_set | {head.rule}:
-            return None, pos
-
-        # Allow involved rules to be evaluated, but only once,
-        # during a seed-growing iteration
-        if rule in head.eval_set:
-            head.eval_set.remove(rule)
-            result = fn(self, *args)
-            endpos = self._mark()
-            m = result, endpos
-
-        return m
 
     @wraps(fn)
     def wrapper_lr(self, *args):
-        m = recall(self, args)
-        if m is None:
-            pos = self._mark()
-            key = (fn, args, pos)
+        pos = self._mark()
+        key = (fn, args, pos)
+        memo = self._memos.get(key)
+        if memo is None:
+            self._memos[key] = lastres, lastpos = None, pos
 
-            # Create a new LR and push in onto
-            # the rule invocation stack
-            lr = _LR(None, rule, None)
-            self._lrstack.append(lr)
+            while True:
+                self._reset(lastpos)
+                result = fn(self, *args)
+                endpos = self._mark()
+                if endpos <= lastpos:
+                    break
 
-            # Memoize lr, then evaluate rule
-            self._memos[key] = lr, pos
-            result = fn(self, *args)
-            self._lrstack.pop()
-            endpos = self._mark()
-            self._memos[key] = lr, endpos
+                self._memos[key] = lastres, lastpos = result, endpos
+                new_key = (fn, args, endpos)
+                self._memos[new_key] = lastres, lastpos
 
-            if lr.head is not None:
-                lr.seed = result
-                return lr_answer(self, args, key, pos)
-            else:
-                self._memos[key] = result, endpos
-                return wrap(result)
+            result = lastres
+            self._reset(lastpos)
 
         else:
-            result, pos = m
-            self._reset(pos)
-            if type(result) is _LR:
-                setup_lr(self, result)
-                return wrap(result.seed)
-            else:
-                return wrap(result)
+            result, endpos = memo
+            self._reset(endpos)
 
-    def setup_lr(self, lr):
-        if lr.head is None:
-            lr.head = _Head(rule, set(), set())
-        for i in reversed(self._lrstack):
-            if i.head == lr.head:
-                break
-            i.head = lr.head
-            lr.head.involved_set.add(i.rule)
-
-    def lr_answer(self, args, key, pos):
-        result, lastpos = self._memos[key]
-        if result.head.rule != rule:
-            return result.seed
-        else:
-            self._memos[key] = result.seed, lastpos
-            if result.seed is None:
-                return None
-            return grow_lr(self, args, key, result.head, pos)
-
-    def grow_lr(self, args, key, head, pos):
-        result, _ = self._memos[key]
-        self._heads[pos] = head
-
-        self._memos[key] = lastres, lastpos = result, pos
-        while True:
-            self._reset(pos)
-            head.eval_set = head.involved_set.copy()
-            result = fn(self, *args)
-            endpos = self._mark()
-            if result is None or endpos <= lastpos:
-                break
-            self._memos[key] = lastres, lastpos = result, endpos
-
-        result = lastres
-        self._reset(lastpos)
-        self._heads.pop(pos)
-
+        if result is not None:
+            if type(result) is not Success:
+                return Success(result)
         return result
 
     return wrapper_lr
