--- a/polygen/backend/python/parser.py.in
+++ b/polygen/backend/python/parser.py.in
@@ -4,6 +4,7 @@
 from __future__ import annotations
 
 from functools import wraps
+from typing import Optional, Union, Any, List
 
 from polygen.reader import Reader
 from polygen.node import (
@@ -31,21 +32,8 @@ from polygen.node import (
 __all__ = ['Parser']
 
 
-class Success:
-    """Parsing result wrapper."""
-
-    def __init__(self, value=None):
-        self.value = value
-
-    def __repr__(self):
-        return f'Success({self.value})'
-
-    def __str__(self):
-        return repr(self)
-
-
 class _MemoEntry:
-    def __init__(self, value, pos):
+    def __init__(self, value: Union[str, Any], pos: int):
         self.value = value
         self.pos = pos
 
@@ -64,16 +52,10 @@ def _memoize(fn):
         key = (fn, args, pos)
         memo = self._memos.get(key)
         if memo is None:
-            result = fn(self, *args)
-            self._memos[key] = _MemoEntry(result, self._mark())
+            self._memos[key] = memo = _MemoEntry(fn(self, *args), self._mark())
         else:
-            result = memo.value
             self._reset(memo.pos)
-
-        if result is not None:
-            if type(result) is not Success:
-                return Success(result)
-        return result
+        return memo.value
 
     return wrapper
 
@@ -106,9 +88,6 @@ def _memoize_lr(fn):
             result = memo.value
             self._reset(memo.pos)
 
-        if result is not None:
-            if type(result) is not Success:
-                return Success(result)
         return result
 
     return wrapper_lr
@@ -123,49 +102,47 @@ class Parser:
         self._lrstack = []
 
         self._reader = reader
-        self._chars: list[str] = []
+        self._chars: List[str] = []
         self._pos = 0
 
     @_memoize
-    def _expectc(self, char: str | None = None) -> Success | None:
+    def _expectc(self, char: Optional[str] = None) -> Optional[str]:
         if c := self._peek_char():
             if char is None or c == char:
                 self._pos += 1
-                return Success(c)
+                return c
         return None
 
     @_memoize
-    def _expects(self, string: str) -> Success | None:
+    def _expects(self, string: str) -> Optional[str]:
         pos = self._mark()
         for c in string:
             if c != self._peek_char():
                 self._reset(pos)
                 return None
             self._pos += 1
-        return Success(string)
+        return string
 
-    def _lookahead(self, positive, fn, *args) -> Success | None:
+    def _lookahead(self, positive, fn, *args) -> Optional[list]:
         pos = self._mark()
         ok = fn(*args) is not None
         self._reset(pos)
         if ok == positive:
-            return Success()
+            return []
         return None
 
-    def _loop(self, nonempty, fn, *args) -> Success | None:
+    def _loop(self, nonempty, fn, *args) -> Optional[List[str]]:
         pos = lastpos = self._mark()
         nodes = []
         while (node := fn(*args)) is not None and self._mark() > lastpos:
-            # Unwrap nodes, removing empty wrappers
-            if node.value is not None:
-                nodes.append(node.value)
+            nodes.append(node)
             lastpos = self._mark()
         if len(nodes) >= nonempty:
-            return Success(nodes)
+            return nodes
         self._reset(pos)
         return None
 
-    def _rep(self, beg, end, fn, *args) -> Success | None:
+    def _rep(self, beg, end, fn, *args) -> Optional[List[str]]:
         end = beg if end is None else end
         pos = lastpos = self._mark()
         count = 0
@@ -175,30 +152,29 @@ class Parser:
             lastpos = self._mark()
             count += 1
         if count >= beg and count <= end:
-            # Unwrap nodes, removing empty wrappers
-            nodes = tuple(n.value for n in nodes if n.value is not None)
-            return Success(nodes)
+            return nodes
         self._reset(pos)
         return None
 
-    def _ranges(self, *ranges):
+    def _ranges(self, *ranges) -> Optional[str]:
         char = self._peek_char()
         if char is None:
             return None
         for beg, end in ranges:
             if char >= beg and char <= end:
-                return Success(self._get_char())
+                self._pos += 1
+                return char
 
-    def _maybe(self, fn, *args):
+    def _maybe(self, fn, *args) -> Union[list, str, Any]:
         result = fn(*args)
-        return Success(result.value if result is not None else result)
+        return result if result is not None else []
 
-    def _get_char(self) -> str | None:
+    def _get_char(self) -> Optional[str]:
         char = self._peek_char()
         self._pos += 1
         return char
 
-    def _peek_char(self) -> str | None:
+    def _peek_char(self) -> Optional[str]:
         if self._pos == len(self._chars):
             self._chars.append(next(self._reader, None))
         return self._chars[self._pos]
@@ -209,7 +185,7 @@ class Parser:
     def _reset(self, pos: int):
         self._pos = pos
 
-    def parse(self) -> Success:
+    def parse(self) -> Any:
         return self._%% entry %%()
 
     %% body %%
@@ -231,5 +207,5 @@ if __name__ == '__main__':
     if result is not None:
         print(result)
 
-    print("Parsing successful" if result else "Parsing failure")
-    exit(not result)  # Unix-style: 0 is success
+    print("Parsing successful" if result is not None else "Parsing failure")
+    exit(result is None)  # Unix-style: 0 is success
