Make things simple
I have removed A LOT of code and restructured the remaining, because things
got out of control in my mind. The code got so messy so I lost in the jungle.

Modifier related code merged into one file modifier.py.
Generator's logic has changed. Now the generator controls the preprocessor,
creates all directives by itself.
Reader and token classes are placed into parser's module.

Removed:
    ModifierRegistry
    Codegen
    Config
    attrholder.py

Added:
    polygen/generator
    logging
    main.py

Rewritten:
    modifiers
    preprocessor
    generator
    main

--- a/polygen/backend/python/parser.py.in
+++ b/polygen/backend/python/parser.py.in
@@ -3,33 +3,101 @@
 
 from __future__ import annotations
 
+import io
+
 from functools import wraps
 from typing import Optional, Union, Any, List
 
-from polygen.reader import Token, Reader
-from polygen.node import (
-    Grammar,
-    Rule,
-    MetaRef,
-    MetaRule,
-    Expr,
-    Alt,
-    NamedItem,
-    Id,
-    String,
-    Char,
-    AnyChar,
-    Class,
-    Range,
-    ZeroOrOne,
-    ZeroOrMore,
-    OneOrMore,
-    Repetition,
-    And,
-    Not
-)
+%% imports %%
 
-__all__ = ['Parser']
+__all__ = ["Token", "Reader", "Parser"]
+
+
+class Token(str):
+    def __new__(cls,
+                value: str,
+                line: int,
+                start: int,
+                end: int,
+                filename: Optional[str] = None):
+        self = super().__new__(cls, value)
+        self.value = value
+        self.line = line
+        self.start = start
+        self.end = end
+        self.filename = filename
+        return self
+
+    def __repr__(self):
+        return f"Token({self.value!r}, {self.line}, {self.start}, {self.end})"
+
+    def __str__(self):
+        return repr(self.value)
+
+
+class Reader:
+    """
+    Reads the file and produces a stream of characters.
+
+    Reader supports strings and UTF-8 encoded streams only.
+    """
+
+    def __init__(self, stream: str | io.TextIOBase, bufsize=4096):
+        self.buffer = ""
+        self.stream = None
+        self.name = None
+        self.bufsize = bufsize
+        self.eof = False
+        self.pointer = 0
+        self.line = 1
+        self.column = 0
+
+        if isinstance(stream, str):
+            self.name = "<string>"
+            self.buffer = stream
+        elif isinstance(stream, io.IOBase):
+            self.name = getattr(stream, 'name', '<stream>')
+            self.stream = stream
+            self.eof = False
+
+            if not stream.readable():
+                raise ValueError(f"stream must be readable: {self.name}")
+
+    def __iter__(self) -> Reader:
+        return self
+
+    def __next__(self) -> Token:
+        try:
+            char = self.buffer[self.pointer]
+        except IndexError:
+            if self.stream:
+                self.update()
+            try:
+                char = self.buffer[self.pointer]
+            except IndexError:
+                self.eof = True
+                raise StopIteration
+        if char in '\r\n':
+            self.line += 1
+            self.column = 0
+        else:
+            self.column += 1
+        self.pointer += 1
+        return Token(char, self.line, self.pointer - 1, self.pointer, self.name)
+
+    def update(self, length: int = 1) -> None:
+        assert self.stream
+        if self.eof:
+            return
+        self.buffer = self.buffer[self.pointer:]
+        self.pointer = 0
+        while len(self.buffer) < length:
+            data = self.stream.read(self.bufsize)
+            if data:
+                self.buffer += data
+            else:
+                self.eof = True
+                break
 
 
 class _MemoEntry:
@@ -202,7 +270,8 @@ if __name__ == '__main__':
 
     ns = argparser.parse_args()
 
-    parser = Parser(ns.input_file)
+    reader = Reader(ns.input_file)
+    parser = Parser(reader)
     result = parser.parse()
 
     if result is not None:
