Fix repetition issue: stop consuming tokens if count == end

--- a/polygen/backend/python/parser.py.in
+++ b/polygen/backend/python/parser.py.in
@@ -121,7 +121,8 @@ def _memoize(fn):
         key = (fn, args, pos)
         memo = self._memos.get(key)
         if memo is None:
-            self._memos[key] = memo = _MemoEntry(fn(self, *args), self._mark())
+            result = fn(self, *args)
+            self._memos[key] = memo = _MemoEntry(result, self._mark())
         else:
             self._reset(memo.pos)
         return memo.value
@@ -243,7 +244,9 @@ class Parser:
             tokens.append(tok)
             lastpos = self._mark()
             count += 1
-        if count >= beg and count <= end:
+            if count == end:
+                return tokens
+        if count >= beg:
             return tokens
         self._reset(pos)
         return None
