--- a/polygen/backend/python/parser.py.in
+++ b/polygen/backend/python/parser.py.in
@@ -43,25 +43,28 @@ class Reader:
     Reader supports strings and UTF-8 encoded streams only.
     """
 
-    def __init__(self, stream: str | io.TextIOBase, bufsize=4096):
-        self.buffer = ""
-        self.buflen = 0
-        self.stream = None
-        self.name = None
+    def __init__(self, stream: Optional[str | io.TextIOBase], bufsize=4096):
         self.bufsize = bufsize
-        self.eof = False
+
+        if stream is not None:
+            self.reset(stream)
+
+    def reset(self, stream: str | io.TextIOBase):
+        self.buffer = ""
+        self.stream = None
+        self.buflen = 0
         self.pointer = 0
         self.line = 1
         self.column = 0
+        self.eof = False
 
         if isinstance(stream, str):
             self.name = "<string>"
             self.buffer = stream
             self.buflen = len(self.buffer)
         elif isinstance(stream, io.IOBase):
-            self.name = getattr(stream, 'name', '<stream>')
+            self.name = getattr(stream, "name", "<stream>")
             self.stream = stream
-            self.eof = False
 
             if not stream.readable():
                 raise ValueError(f"stream must be readable: {self.name}")
@@ -307,10 +310,15 @@ class Parser:
             (tok.filename, tok.line, tok.start, tok, tok.line, len(tok))
         )
 
-    def parse(self) -> Any:
+    def parse(self, stream: str | io.TextIOBase) -> Any:
+        self._reader.reset(stream)
+        self._tokens.clear()
+        self._pos = 0
+
         result = self._%% entry %%()
         if result is None:
             raise self.make_syntax_error()
+
         return result
 
     %% body %%
@@ -326,10 +334,10 @@ if __name__ == '__main__':
 
     ns = argparser.parse_args()
 
-    reader = Reader(ns.input_file)
+    reader = Reader(None)
     parser = Parser(reader)
     try:
-        result = parser.parse()
+        result = parser.parse(ns.input_file)
         print(repr(result))
     except SyntaxError as e:
         traceback.print_exception(SyntaxError, e, None)
