--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,17 @@ classifiers = [
 ]
 keywords = ["packrat", "peg", "parser", "generator", "parser generator"]
 
+[project.scripts]
+polygen = "polygen:__main__.main"
+
+[project.optional-dependencies]
+tests = [
+  "pytest"
+]
+docs = [
+  "mkdocs>=1.6.0"
+]
+
 [build-system]
 requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
 build-backend = "setuptools.build_meta"
